--- a/AviaTiketsWpfApplication/AviaTicketsWpfApplication.csproj
+++ b/AviaTiketsWpfApplication/AviaTicketsWpfApplication.csproj
@@ -27,11 +27,16 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <InstallUrl>https://raw.githubusercontent.com/nikitadev/TravelpayoutsAPI/master/publish/</InstallUrl>
-    <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
+    <SupportUrl>https://github.com/nikitadev/TravelpayoutsAPI/</SupportUrl>
+    <ErrorReportUrl>https://github.com/nikitadev/TravelpayoutsAPI/labels/bug</ErrorReportUrl>
+    <ProductName>Travelpayots API</ProductName>
+    <PublisherName>nikitadev</PublisherName>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>4</ApplicationRevision>
+    <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
+    <ApplicationRevision>5</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <UseApplicationTrust>false</UseApplicationTrust>
+    <UseApplicationTrust>true</UseApplicationTrust>
+    <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
