--- a/AviaTiketsWpfApplication/AviaTicketsWpfApplication.csproj
+++ b/AviaTiketsWpfApplication/AviaTicketsWpfApplication.csproj
@@ -82,8 +82,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>
-    </ApplicationIcon>
+    <ApplicationIcon>Resources\icon.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
