--- a/AviaTiketsWpfApplication/AviaTicketsWpfApplication.csproj
+++ b/AviaTiketsWpfApplication/AviaTicketsWpfApplication.csproj
@@ -172,8 +172,18 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
+    <Reference Include="System.IO.Compression" />
     <Reference Include="System.Net" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Extensions, Version=2.2.29.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Net.Http.2.2.29\lib\net45\System.Net.Http.Extensions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Net.Http.Primitives, Version=4.2.29.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Net.Http.2.2.29\lib\net45\System.Net.Http.Primitives.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\MahApps.Metro.1.1.3-ALPHA071\lib\net45\System.Windows.Interactivity.dll</HintPath>
       <Private>True</Private>
@@ -249,7 +259,6 @@
     <Compile Include="ViewModels\Data\CityViewModel.cs" />
     <Compile Include="Fundamentals\Interfaces\IHyperlinkViewModel.cs" />
     <Compile Include="ViewModels\Data\CountryViewModel.cs" />
-    <Compile Include="ViewModels\Data\TicketViewModel.cs" />
     <Compile Include="ViewModels\DirectTicketsViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\Data\OfferViewModel.cs" />
