--- a/AviaTiketsWpfApplication/packages.config
+++ b/AviaTiketsWpfApplication/packages.config
@@ -6,9 +6,11 @@
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Compression" version="3.9.85" targetFramework="net46" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net46" />
   <package id="MvvmLight" version="5.1.1.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1-beta3" targetFramework="net45" />
-  <package id="sqlite.redist" version="3.8.4.2" targetFramework="net45" />
   <package id="sqlite-net" version="1.0.8" targetFramework="net45" />
+  <package id="sqlite.redist" version="3.8.4.2" targetFramework="net45" />
 </packages>
