--- a/AviaTiketsWpfApplication/App.config
+++ b/AviaTiketsWpfApplication/App.config
@@ -37,6 +37,12 @@
             <setting name="ChipTicketsIconName" serializeAs="String">
                 <value>appbar_coupon</value>
             </setting>
+            <setting name="RealtimeTicketsIconName" serializeAs="String">
+                <value>appbar_magnify_browse</value>
+            </setting>
+            <setting name="Host" serializeAs="String">
+                <value>Sample for TravelpayoutsAPI .NET</value>
+            </setting>
         </AviaTicketsWpfApplication.Properties.Settings>
     </applicationSettings>
     <userSettings>
@@ -45,7 +51,10 @@
                 <value>https://www.travelpayouts.com/</value>
             </setting>
             <setting name="TestToken" serializeAs="String">
-                <value>321d6a221f8926b5ec41ae89a3b2ae7b</value>
+                <value>9698fc7c86add3ece24f30a23b567fdf</value>
+            </setting>
+            <setting name="TestMarker" serializeAs="String">
+                <value>77022</value>
             </setting>
         </AviaTicketsWpfApplication.Properties.Settings>
     </userSettings>
