--- a/TravelpayoutsAPI.Library/packages.config
+++ b/TravelpayoutsAPI.Library/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="David.Utility.Cryptography" version="1.5.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="portable-net45+win8+wp8+wpa81" />
-  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable-net45+win8+wp8+wpa81" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Microsoft.Bcl.Compression" version="3.9.85" targetFramework="portable-net45+win8+wp8+wpa81" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable-net45+win8+wp8+wpa81" />
-  <package id="Newtonsoft.Json" version="7.0.1-beta2" targetFramework="portable-net45+win8+wp8+wpa81" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
